src/objects/Musqot_member__c.object
<CustomObject>
    <fields>
        <fullName>Marketing_activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing activity</label>
        <referenceTo>Marketing_activity__c</referenceTo>
        <relationshipName>Musqot_members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Musqot_members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Viewer</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Member</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_type__c</fullName>
        <label>User type</label>
        <picklist>
            <picklistValues>
                <fullName>Internal user</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Partner user</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communities user</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Subproject__c</referenceTo>
        <relationshipName>Musqot_members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>userid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Musqot_members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Plan member</label>
    <nameField>
        <label>Plan member</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>